AG-3042 fix footer line visible

--- a/src/popup/components/InfoMessage/info-message.pcss
+++ b/src/popup/components/InfoMessage/info-message.pcss
@@ -5,22 +5,6 @@
     justify-content: space-between;
     padding: 8px 15px 20px 15px;
 
-    &:after {
-        content: "";
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        width: 100%;
-        height: 8px;
-        background-color: var(--grayd8);
-    }
-
-    &--active {
-        &:after {
-            background-color: var(--green76);
-        }
-    }
-
     &--feedback {
         padding: 10px 13px 11px;
         background-color: #8a9ca0;
