--- a/src/popup/components/Settings/settings.pcss
+++ b/src/popup/components/Settings/settings.pcss
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     height: 100%;
-    padding: 20px 0px 30px;
+    padding: 20px 0px 8px;
 
     &:after {
         content: "";
@@ -22,21 +22,11 @@
     }
 
     &--premium-promo {
-        padding-bottom: 0px;
-
         &:after {
             display: none;
         }
     }
-
-    &--premium-token {
-        padding-bottom: 30px;
-
-        &:after {
-            display: block;
-        }
-    }
-
+    
     &--feedback {
         padding-bottom: 0px;
 
